--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,62 @@
+version: '3.8'
 
 services:
-  wordpress:
-    image: wordpress:latest
-    restart: no
-    ports:
-      - 8000:80
-    environment:
-      WORDPRESS_DB_HOST: db
-      WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: wordpress_password
-      WORDPRESS_DB_NAME: wordpress
-    volumes:
-      - ./wp-theme:/var/www/html/wp-content/themes/bis-theme
-    depends_on:
-      - db
-
-  db:
+  mysql:
     image: mysql:8.0
-    restart: no
-    environment:
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: wordpress
-      MYSQL_PASSWORD: wordpress_password
-      MYSQL_ROOT_PASSWORD: wordpress_root_password
+    container_name: mysql
+    restart: unless-stopped
+    env_file:
+      - "./.env.mysql"
+    networks:
+      - bisnet
+    ports:
+      - "3307:3306"
     volumes:
       - db_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "--silent"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
+      start_period: 40s
+
+  wordpress:
+    image: wordpress:latest
+    restart: unless-stopped
+    ports:
+      - "8000:80"
+    env_file:
+      - "./.env.wordpress"
+    networks:
+      - bisnet
+    watch:
+      action: rebuild
+      path: ./wp-theme
+      target: /var/www/html/wp-content/themes/bis-theme
+      
+    volumes:
+      - ./wp-theme:/var/www/html/wp-content/themes/bis-theme
+      - ./uploads:/var/www/html/wp-content/uploads/
+    depends_on:
+      mysql:
+        condition: service_healthy
+
+  phpmyadmin:
+    image: phpmyadmin:latest
+    restart: unless-stopped
+    networks:
+      - bisnet
+    ports:
+      - "8080:80"
+    env_file:
+      - "./.env.pma"
+    depends_on:
+      mysql:
+        condition: service_healthy
 
 volumes:
   db_data:
+
+networks:
+  bisnet:
+    driver: bridge
